Cleanup for abbreviations

--- a/Talk7/03_related_work/03-1_ddos.tex
+++ b/Talk7/03_related_work/03-1_ddos.tex
@@ -100,7 +100,7 @@ As a final consideration, the authors remarked that none of the preceding method
 
 \subsubsection{Multi domain DDoS Mitigation based on Blockchains}
 % \cite{Rodrigues2017a}
-Another approach repeatedly uses smart contracts as a means of advertising information across multiple domains. The architecture as seen in figure \ref{ddos_multi_domain_architecture} involves the following entities: \textbf{Software-Defined Networks (SDN)} facilitate the development of customizable security management; \textbf{Network Function Virtualization (NFV)} that are provisioned in generic hardware strengthen security policies through virtualized functions; an Ethereum-based \textbf{Blockchain} is a base for all participants of the cooperative network to advertise DDoS attacks within a timeframe of 14s, in which a new block is mined; and a \textbf{smart contract} that stores black or whitelisted IP addresses of customers \cite{Rodrigues2017}.
+Another approach repeatedly uses smart contracts as a means of advertising information across multiple domains. The architecture as seen in figure \ref{ddos_multi_domain_architecture} involves the following entities: \textbf{SDN} facilitate the development of customizable security management; \textbf{NFV} that are provisioned in generic hardware strengthen security policies through virtualized functions; an Ethereum-based \textbf{Blockchain} is a base for all participants of the cooperative network to advertise DDoS attacks within a timeframe of 14s, in which a new block is mined; and a \textbf{smart contract} that stores black or whitelisted IP addresses of customers \cite{Rodrigues2017}.
 
 \begin{figure}[ht]
   \begin{center}
