--- a/Talk7/03_related_work/03-2_pki_ksi.tex
+++ b/Talk7/03_related_work/03-2_pki_ksi.tex
@@ -7,7 +7,7 @@ What makes this type of cryptography so convenient is that its security does not
 
 For a private exchange between two to a few counterparties, the simple approach of distributing public keys out-of-band (\textit{e.g.}, in person) might suffice to establish sufficient confidence and trust. As soon as we consider communication networks on a larger scale, an in-person exchange between all parties in the network would no longer be feasible. In such a case, one or more trusted, often centralized entities need to support the process of establishing trust \cite{straub_tobias_usability_2006}.
 
-Public Key Infrastructure (PKI) is the summary term for an infrastructure that enables secure communication through such trusted entities. As described in \cite{straub_tobias_usability_2006}, a PKI "lets participants communicate with each other securely using public key cryptography and allows them to verify each other's keys with the help of certificates and trust relations."
+PKI is the summary term for an infrastructure that enables secure communication through such trusted entities. As described in \cite{straub_tobias_usability_2006}, a PKI "lets participants communicate with each other securely using public key cryptography and allows them to verify each other's keys with the help of certificates and trust relations."
 
 
 \subsubsection{Existing PKI Systems}
@@ -97,8 +97,8 @@ In the solution proposed in \cite{zohar_blockchain-based_2019}, certificate auth
 
 A Keyless Signature Infrastructure (KSI) is the basis for an alternative approach to verification of the integrity of documents that does not depend on the secrecy of private keys. A document that is submitted to a KSI is first hashed and then added to a Merkle hash-tree containing all documents processed in the same round (\textit{i.e.}, with other documents that arrived around the same time). The signature token received upon document submission can then be used to check whether a document was contained in the tree at the given time. By following the path encoded in the signature token, it must be possible to reconstruct the root-hash of the entire tree \cite{hutchison_keyless_2013, jamthagen_blockchain-based_2016}.
 
-The KSI architecture processes incoming signature requests in rounds (\textit{e.g.}, one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree ("hash calendar"). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (\textit{i.e.}, signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
+The KSI architecture processes incoming signature requests in rounds (\textit{e.g.}, one round per second) and, after completion of a round, appends the root-hash of the generated hash tree to a global tree (``hash calenda''). The root of this global tree is then periodically published as a trust anchor that can be used to verify the presence of a document at a point before its publication \cite{hutchison_keyless_2013}. Contrary to the approach of signing documents with one's private key, this approach depends on the infrastructure (\textit{i.e.}, signing servers) to sign the document into the tree. This is what makes possible keyless signing but also incurs a dependency on the availability of the KSI to sign a document \cite{jamthagen_blockchain-based_2016}.
 
-\cite{hutchison_keyless_2013} suggests that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
+The authors of \cite{hutchison_keyless_2013} suggest that the root-hash could be published to broad-reach media like newspapers in monthly iterations. This would allow verification of a document's integrity even without the KSI infrastructure, as one can compute the root-hash and compare it to the one published. However, this approach is inefficient in that it needs manual verification against an external medium and can only be performed with a reasonable publishing frequency \cite{jamthagen_blockchain-based_2016}.
 
 The Blockchain-based approach presented in \cite{jamthagen_blockchain-based_2016} improves the efficiency by publishing to the Blockchain in an increased frequency such that one can more granularly verify when a document was signed (\textit{i.e.}, added to the tree). Additionally, the break between media is no longer necessary, as signatures can be automatically verified based on the Blockchain contents. When publishing to the Blockchain, the frequency can be increased to several times per hour, as it is only limited by the throughput of blocks being mined \cite{jamthagen_blockchain-based_2016}.
