--- a/Talk7/01_introduction/01_introduction.tex
+++ b/Talk7/01_introduction/01_introduction.tex
@@ -6,7 +6,7 @@ The evolution of Blockchain systems over the past decade has led to research on 
 
 To establish a solid foundation, Section~\ref{sec:02_background} provides a summary of the most important basic concepts and technical background. More specifically, Section~\ref{subsec:02_cybersecurity} goes into the traditional concepts of cybersecurity and the threat models that have been developed in the area (\textit{e.g.}, the CIA triangle~\cite{whitman2011principles}). Section \ref{subsec:02_Blockchain} then presents the basics of Blockchain on the example of Bitcoin, while Section \ref{subsec:02_smart_contracts} summarizes the concept of smart contracts, an evolution based on the core infrastructure of the Blockchain.
 
-On a lower, more technical level, this work focuses on the applications of Blockchain for the prevention of Distributed Denial of Service attacks (DDoS attacks), as well as the improvement of key parts of the internet infrastructure. DDoS attacks are a possibility for attackers to flood the service of a company. Such attacks can lead to availability issues (\textit{e.g.}, causing service downtimes) and thus result in significant business forfeits. Approaches to protecting networks against such DDoS attacks using Blockchain technologies are summarized in Section~\ref{subsec:03_ddos}.
+On a lower, more technical level, this work focuses on the applications of Blockchain for the prevention of Distributed Denial of Service (DDoS) attacks, as well as the improvement of key parts of the internet infrastructure. DDoS attacks are a possibility for attackers to flood the service of a company. Such attacks can lead to availability issues (\textit{e.g.}, causing service downtimes) and thus result in significant business forfeits. Approaches to protecting networks against such DDoS attacks using Blockchain technologies are summarized in Section~\ref{subsec:03_ddos}.
 
 A critical part of the internet and communications security in today's environment is the existence of communication methods that participants trust to deliver messages securely and confidently. Public Key Infrastructures (PKI) provide the backbone for many of these methods. Existing PKI architectures often rely on a centralized infrastructure, which enables many kinds of attacks. We provide an overview of possible improvements to PKI using Blockchain technologies in Section \ref{subsec:03_pki}.
 
