--- a/Talk7/04_final_considerations/04_final_considerations.tex
+++ b/Talk7/04_final_considerations/04_final_considerations.tex
@@ -4,13 +4,13 @@ The goal of this section is first to summarize the key points of this paper, and
 
 \subsection{Summary}
 
-After giving some foundational concepts in the areas of cybersecurity, Blockchain, and smart contracts, the potential use of Blockchain technology for combating DDoS attacks, for decentralizing Public Key Infrastructure (PKI), for securing the Internet of Things (IoT), as well as for some specific applications is described. Blockchain technology is a good choice whenever there is a need for integrity and decentralization.
+After giving some foundational concepts in the areas of cybersecurity, Blockchain, and smart contracts, the potential use of Blockchain technology for combating DDoS attacks, for decentralizing PKI, for securing the IoT, as well as for some specific applications is described. Blockchain technology is a good choice whenever there is a need for integrity and decentralization.
 
 For dealing with DDoS attacks, Blockchains and smart contracts can be used to serve as a decentralized database to store white- and blacklisted IP-addresses. Blockchains and smart contract also facilitate the sharing of information.
-Various mitigation techniques such as Software-Defined Networks (SDN) and Network Function Virtualization (NFV) can be combined and facilited with Blockchain technology and smart contracts.
+Various mitigation techniques such as SDN and NFV can be combined and facilited with Blockchain technology and smart contracts.
 
-In public key infrastructure, a major danger is a certificate authority being hacked. Decentralizing the public key infrastructure averts this danger. Namecoin is a Blockchain with the goal to store all DNS-related naming information in a Blockchain. There are Blockchain-based PKI solutions that build upon namecoin to decentralize the PKI architecture.
-With gazal, the traditional web certification model is moved to the Ethereum Blockchain with a smart contract specifying all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates.
+In PKI, a major danger is a certificate authority being hacked. Decentralizing PKI averts this danger. Namecoin is a Blockchain with the goal to store all DNS-related naming information in a Blockchain. There are Blockchain-based PKI solutions that build upon Namecoin to decentralize the PKI architecture.
+With Gazal, the traditional web certification model is moved to the Ethereum Blockchain with a smart contract specifying all procedures regarding the registration, transfer, and expiration of domains, as well as the associated values and certificates.
 
 In IoT, Blockchain technology is proposed to help with the integrity of IoT datasets. IoT devices like sensors typically generate lots of data. Blockchain preserves the integrity of IoT generated datasets. Further, IoT and Blockchain combinationd have been shown to be a useful
 combination in managing IoT devices. This can be along a supply chain where IoT devices change ownership or have to record transactions or in a smart home
