--- a/Talk7/02_background/02-3_smart_contracts.tex
+++ b/Talk7/02_background/02-3_smart_contracts.tex
@@ -10,7 +10,7 @@ Once deployed on the Blockchain, the code cannot be changed. Deploying smart con
 
 Users are able to transfer cryptocurrencies (\textit{e.g.} Ether) to smart contracts.However, sending Ether to a smart contract that does not provide functionality to retrieve those ethers means they are lost forever in the contract. This is crucial especially when designing contracts that implement business logic or any contracts for that matter. Smart contracts should be reviewed and audited carefully and tested for vulnerabilities else its weaknesses can be exploited like in the infamous ``DAO`` attack~\cite{DoaAttack}.
 
-Every transaction on the Ethereum Blockchain costs a fee called gas. Gas is expressed in ether. The miner that mines a transaction collects the gas associated with it, thus gas serves as an incentive for miners to mine and contribute to the network. There is a defined set of operations with their respective gas costs in the Ethereum yellow paper \cite{ethereumyellowpaer}.
+Every transaction on the Ethereum Blockchain costs a fee called gas. Gas is expressed in Ether. The miner that mines a transaction collects the gas associated with it, thus gas serves as an incentive for miners to mine and contribute to the network. There is a defined set of operations with their respective gas costs in the Ethereum yellow paper \cite{ethereumyellowpaer}.
 Figure \ref{fig:smart_contract_fees} depicts an excerpt of those costs.
 
 \begin{figure}[ht!]
