--- a/Talk7/library.bib
+++ b/Talk7/library.bib
@@ -13,6 +13,23 @@
   title = {{Seizing the Enigma: The Race to Break the German U-Boats Codes, 1939-1943}},
   year = {1991}
 }
+@article{Plageras2017,
+  author={Plageras, Andreas P. and Psannis, Kostas E. and Stergiou, Christos and Wang, Haoxiang and Hupta B.B.},
+  title={{Efficient IoT-based sensor BIG Data collection–processing and analysis in smart buildings}}
+}
+@article{Huckle2016,
+abstract = {This paper explores how the Internet of Things and blockchain technology can benefit shared economy applications. The focus of this research is understanding how blockchain can be exploited to create decentralised, shared economy applications that allow people to monetise, securely, their things to create more wealth. Shared economy applications such as Airbnb and Uber are well-known applications, but there are many other opportunities to share in the digital economy. With the recent interest in the Internet of Things and blockchain, the opportunity exists to create a myriad of sharing applications, e.g. peer-to-peer automatic payment mechanisms, foreign exchange platforms, digital rights management and cultural heritage to name but a few. While many types of shared economy scenarios are proliferating, few of them, so far, leverage the Internet of Things and blockchain as technologies to build distributed applications. This paper discusses how we might make use of the Internet of Things and blockchains to create secure shared economy distributed applications. Presented are examples of such distributed applications in the context of an Internet of Things architecture using blockchain technology.},
+author = {Huckle, Steve and Bhattacharya, Rituparna and White, Martin and Beloff, Natalia},
+doi = {10.1016/j.procs.2016.09.074},
+file = {:Users/pascalzehnder/Dropbox/UZH/19{\_}FS/Master Thesis/Resources/Huckle et al. - 2016 - Internet of Things, Blockchain and Shared Economy Applications.pdf:pdf},
+issn = {18770509},
+journal = {Procedia Computer Science},
+keywords = {Internet of Things,Radio Frequency Identification,blockchain,distributed applications,peer-to-peer,smart contracts},
+pages = {461--466},
+title = {{Internet of Things, Blockchain and Shared Economy Applications}},
+volume = {58},
+year = {2016}
+}
 
 @article{Shackelford2016,
   archivePrefix = {arXiv},
@@ -1158,8 +1175,3 @@ year = {2015}
   journal = {Blockgeeks Ethereum Gas}
 
 }
-
-
-
-
-
